terraform/modules/vpc/subnets.tf
resource "aws_subnet" "public" {
  for_each = local.public_subnets_by_name

  vpc_id                  = aws_vpc.this.id
  cidr_block              = each.value.cidr_block
  availability_zone       = each.value.availability_zone
  map_public_ip_on_launch = each.value.map_public_ip_on_launch

  tags = {
    Name = each.value.name
  }
}

resource "aws_subnet" "private" {
  for_each = local.private_subnets_by_name

  vpc_id            = aws_vpc.this.id
  cidr_block        = each.value.cidr_block
  availability_zone = each.value.availability_zone

  tags = {
    Name = each.value.name
  }
}
